added backend for authro

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash": "^4.17.20",
     "mongodb": "3.5.5",
     "mongoose": "^5.10.7",
+    "nodemailer": "^6.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hot-loader": "4.12.20",
