firease added and .....

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "crypto": "^1.0.1",
     "express": "4.17.1",
     "express-jwt": "^6.0.0",
+    "firebase": "^8.4.1",
     "fs-extra": "^9.1.0",
     "helmet": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
@@ -33,7 +34,6 @@
     "react-hot-loader": "4.12.20",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "twilio": "^3.56.0",
     "webpack": "4.42.1",
     "webpack-cli": "3.3.11",
     "webpack-dev-middleware": "3.7.2",
